jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin

  template:
    metadata:
      labels:
        app: jellyfin
        name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: jellyfin-config
              mountPath: "/config"
            - name: jellyfin-cache
              mountPath: "/cache"
            - name: jellyfin-media
              mountPath: "/media"
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-media

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      nodePort: 30096
      name: jellyfin-ui
      protocol: TCP
  #   - 192.168.1.14
